# battery-stats

./: .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  History  Makefile.am  Makefile.in  README  README.md  TODO  config.h.cmake  config.h.in  configure  configure.ac
data/: CMakeLists.txt  battery-stats-graph.desktop  battery-stats.desktop
data/conf/: battery-stats.conf
data/man/: ChangeLog  battery-graph.1  battery-log.1  battery-stats-collector.8  battery-stats.5
data/pm-utils-power.d/: 20_battery-stats
data/pm-utils-sleep.d/: 20_battery-stats
data/systemd-system-sleep/: battery-stats
data/udev-rules.d/: battery-stats.rules
man/: ChangeLog  Makefile.am  Makefile.in  battery-graph.1  battery-log.1  battery-stats-collector.8  battery-stats.5
pixmaps/: Makefile.am  Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  battery-graph.in  battery-log  battery-stats-collector  battery-stats-collector.c  battery-stats-generate  battery-stats-graph  battery-stats-graph-flow  battery-stats-graph-gnuplot  battery-stats-graph.py  collect-csv  graph-setup
