# This file is part of the battery-stats package.
# Copyright (C) 2009 Antonio Radici <antonio@dyne.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

man1_MANS = battery-log.1 battery-graph.1
man5_MANS = battery-stats.5 
man8_MANS = battery-stats-collector.8 
EXTRA_DIST = $(man1_MANS) $(man5_MANS) $(man8_MANS)
